examples/test/testpolicy6188.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6188
  namespace: namespace158
spec:
  podSelector:
    matchLabels:
      key8: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value45
      podSelector:
        matchLabels:
          key0: value1
          key13: value7
          key42: value2
